--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="src/assets/images/web-development.png"
-    />
+
+    <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SafeManager</title>
   </head>
