--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 
     <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SafeManager</title>
+    <title>Storix</title>
   </head>
   <body>
     <div id="root"></div>
